# swagger.yaml
@@ -1,14 +1,14 @@
 openapi: 3.0.0
 info:
-  version: '1.0.0'
-  title: 'REST API with SpringBoot'
-  description: 'Simple customers API - Specification'
+  version: "1.0.0"
+  title: "REST API with SpringBoot"
+  description: "Simple customers API - Specification"
 
 paths:
   /api/v1/customer:
     get:
       tags:
-      - "Customer"
+        - "Customer"
       summary: Get all Customers
       responses:
         200:
@@ -16,27 +16,27 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/customers'
+                $ref: "#/components/schemas/customers"
         500:
           description: Internal Server Error
 
     post:
       tags:
-      - "Customer"
+        - "Customer"
       summary: Create an Customer
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/customer_payload'
+              $ref: "#/components/schemas/customer_payload"
       responses:
         201:
           description: Created
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/customer'
+                $ref: "#/components/schemas/customer"
         500:
           description: Internal Server Error
 
@@ -52,7 +52,7 @@ paths:
 
     get:
       tags:
-      - "Customer"
+        - "Customer"
       summary: Get an Customer
       responses:
         200:
@@ -60,7 +60,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/customer'
+                $ref: "#/components/schemas/customer"
         404:
           description: Not Found
         500:
@@ -68,7 +68,7 @@ paths:
 
     delete:
       tags:
-      - "Customer"
+        - "Customer"
       summary: Delete an Customer
       responses:
         204:
@@ -78,21 +78,21 @@ paths:
 
     put:
       tags:
-      - "Customer"
+        - "Customer"
       summary: Update an Customer
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/customer_payload'
+              $ref: "#/components/schemas/customer_payload"
       responses:
         202:
           description: Accepted
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/customer'
+                $ref: "#/components/schemas/customer"
         500:
           description: Internal Server Error
 
@@ -101,17 +101,17 @@ components:
     customers:
       type: array
       items:
-        $ref: '#/components/schemas/customer'
+        $ref: "#/components/schemas/customer"
 
     customer:
       allOf:
         - type: object
           properties:
-            id: 
+            id:
               type: number
               example: 1
-        - $ref: '#/components/schemas/customer_payload'
-      
+        - $ref: "#/components/schemas/customer_payload"
+
     customer_payload:
       type: object
       required:
